andres/force-app/main/default/objects/Lot__c/fields/Lot_Value__c.field-meta.xml
<CustomField>
    <fullName>Lot_Value__c</fullName>
    <label>Lot Value</label>
    <summarizedField>Vehicle__c.Price__c</summarizedField>
    <summaryFilterItems>
        <field>Vehicle__c.Price__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Vehicle__c.Lot__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>