andres/force-app/main/default/objects/Lot__c/fields/Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Type__c</fullName>
    <label>Vehicle Type</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>